fix: skip write when no symbols #2